# ParticleSystem

./: .gitignore  CMakeLists.txt  README.md
headers/containers/: Container.h
headers/emitters/: Emitter.h
headers/generators/: AccelerationGenerator.h  AgeGenerator.h  BasicColorGenerator.h  BasicPositionGenerator.h  Generator.h  MassGenerator.h  MousePointerPositionGenerator.h  VelocityGenerator.h
headers/renderer/: OpenGLRenderer.h  Renderer.h  shaders.glsl
headers/system/: System.h
headers/updaters/: AgeUpdater.h  ColorUpdater.h  GravityUpdater.h  PositionUpdater.h  Updater.h  VelocityUpdater.h
src/: main.cpp
src/containers/: Container.cpp
src/emitters/: Emitter.cpp
src/generators/: AccelerationGenerator.cpp  AgeGenerator.cpp  BasicColorGenerator.cpp  BasicPositionGenerator.cpp  MassGenerator.cpp  MousePointerPositionGenerator.cpp  VelocityGenerator.cpp
src/system/: System.cpp
src/updaters/: AgeUpdater.cpp  ColorUpdater.cpp  GravityUpdater.cpp  PositionUpdater.cpp  VelocityUpdater.cpp
